scripts/gtopt_check_pampl/examples/errors/bad_inactive.pampl
# =============================================================================
# Error: Invalid 'inactive' usage
# =============================================================================
# The 'inactive' keyword must be followed by 'constraint'.

inactive oops: generator('G1').generation <= 100;
